force-app/main/default/objects/Case/fields/Account_Details_Completed__c.field-meta.xml
<CustomField>
    <fullName>Account_Details_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensure the Account Trading Currency, Tax Status, and Invoice Email fields are updated. For Audit clients, also update the Audit Categories. Use the LC Update Button for efficiency.</inlineHelpText>
    <label>Account Details Completed</label>
    <type>Checkbox</type>
</CustomField>