force-app/main/default/objects/Case/fields/Account_Team_Verified__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Verify that the relevant team members, including the partner&apos;s key contacts and the assigned LC, are updated in the Account Team.</inlineHelpText>
    <label>Account Team Verified</label>
    <type>Checkbox</type>
</CustomField>