force-app/main/default/objects/Case/fields/CAF_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>CAF_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAF Form Submitted?</label>
    <type>Checkbox</type>
</CustomField>