force-app/main/default/objects/Case/fields/Case_Team_Updated__c.field-meta.xml
<CustomField>
    <fullName>Case_Team_Updated__c</fullName>
    <inlineHelpText>Add the assigned LC and other key stakeholders to the Case Team. This provides visibility and collaboration for all involved.</inlineHelpText>
    <label>Case Team Updated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>