force-app/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Onboarded</fullName>
            </value>
            <value>
                <fullName>Declined - Missing AML documents</fullName>
            </value>
            <value>
                <fullName>Declined - CAF incomplete</fullName>
            </value>
            <value>
                <fullName>Declined - Professional Clearance response incomplete</fullName>
            </value>
            <value>
                <fullName>Declined - Missing subsidiary info</fullName>
            </value>
            <value>
                <fullName>Yearly Check Complete</fullName>
            </value>
            <value>
                <fullName>Adhoc Check Complete</fullName>
            </value>
            <value>
                <fullName>Service Line Complete</fullName>
            </value>
            <value>
                <fullName>Lost Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>