force-app/main/default/objects/Case/fields/Compliance_Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approval_Completed__c</fullName>
    <inlineHelpText>After securing Partner Approval, automatically send the Case to the Risk Team for Compliance Approval.</inlineHelpText>
    <label>Compliance Approval Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>