force-app/main/default/objects/Case/fields/CP_Confidential_Area__c.field-meta.xml
<CustomField>
    <fullName>CP_Confidential_Area__c</fullName>
    <label>CP Confidential Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_Sharing</valueSetName>
    </valueSet>
</CustomField>