force-app/main/default/objects/Case/fields/Engagement_Doc_Submitted_for_Approver__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Doc_Submitted_for_Approver__c</fullName>
    <inlineHelpText>Submit the Engagement Document for internal approval through the Engagement Pack Approval process.</inlineHelpText>
    <label>Engagement Doc Submitted for Approver</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>