force-app/main/default/objects/Case/fields/Engagement_Document_Drafted__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Document_Drafted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Lifecycle Coordinator (LC) has drafted the Engagement Document, ensuring all required details are included.</inlineHelpText>
    <label>Engagement Document Drafted</label>
    <type>Checkbox</type>
</CustomField>