force-app/main/default/objects/Case/fields/Engagement_Document_Sent_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Document_Sent_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>After internal approval, send the Engagement Document to the client using the &quot;Send from DocuSign&quot; button on the Case. Clearly communicate the next steps to the client, including signing and returning the document.</inlineHelpText>
    <label>Engagement Document Sent to Client</label>
    <type>Checkbox</type>
</CustomField>