force-app/main/default/objects/Case/fields/Escalated_to_Risk_Team__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_Risk_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If a PEP, RCA, SIP, or other risk flag is identified, escalate the Onboarding Case to the Risk Team for review. Attach all supporting documentation, including the CAF and Smart Search findings, to the Case.</inlineHelpText>
    <label>Escalated to Risk Team</label>
    <type>Checkbox</type>
</CustomField>