force-app/main/default/objects/Case/fields/Flags_Reviewed_and_Addressed__c.field-meta.xml
<CustomField>
    <fullName>Flags_Reviewed_and_Addressed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Risk Team has assessed all flagged items identified during the initial Smart Search (e.g., PEP, RCA, SIP, or other concerns). Ensure all risks are documented and addressed. If additional information is required, return the Case to the Lifecycle Coordinator (LC) with specific questions or clarification requests.</inlineHelpText>
    <label>Flags Reviewed and Addressed</label>
    <type>Checkbox</type>
</CustomField>