force-app/main/default/objects/Case/fields/Form_Approval_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Form_Approval_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If no flags are raised during the Smart Search, trigger the Form Approval process. Verify that all required fields in the CAF are complete and accurate before submission.</inlineHelpText>
    <label>Form Approval Triggered</label>
    <type>Checkbox</type>
</CustomField>