force-app/main/default/objects/Case/fields/LC_Assigned_to_Case__c.field-meta.xml
<CustomField>
    <fullName>LC_Assigned_to_Case__c</fullName>
    <inlineHelpText>Identify and assign the Lifecycle Coordinator (LC) currently working with the relevant partner on the Account. This ensures continuity and seamless coordination for the Case.</inlineHelpText>
    <label>LC Assigned to Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>