force-app/main/default/objects/Case/fields/Onboarding_Case_Verified__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Case_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensure all initial information in the Case is accurate and complete before proceeding.</inlineHelpText>
    <label>Onboarding Case Verified</label>
    <type>Checkbox</type>
</CustomField>