force-app/main/default/objects/Case/fields/Onboarding_Successful__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the client has been successfully onboarded, set the closure reason to &quot;Onboarded&quot; to indicate completion.</inlineHelpText>
    <label>Onboarding Successful</label>
    <type>Checkbox</type>
</CustomField>