force-app/main/default/objects/Case/fields/Onboarding_Unsuccessful__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Unsuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the onboarding process did not proceed, select an appropriate reason from the dropdown to document why the process was unsuccessful.</inlineHelpText>
    <label>Onboarding Unsuccessful</label>
    <type>Checkbox</type>
</CustomField>