force-app/main/default/objects/Case/fields/Partner_Approval_Sent__c.field-meta.xml
<CustomField>
    <fullName>Partner_Approval_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Send the Case for Partner Approval using the Approval button on the Case.</inlineHelpText>
    <label>Partner Approval Sent</label>
    <type>Checkbox</type>
</CustomField>