force-app/main/default/objects/Case/fields/PEP_SIP_RCA_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>PEP_SIP_RCA_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEP/SIP/RCA Form Submitted?</label>
    <type>Checkbox</type>
</CustomField>