force-app/main/default/objects/Case/fields/Professional_Clearance_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Professional_Clearance_Letter_Sent__c</fullName>
    <inlineHelpText>If the client is an Audit client, send the Professional Clearance Letter to ensure compliance and initiate communication with relevant parties.</inlineHelpText>
    <label>Professional Clearance Letter Sent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>