force-app/main/default/objects/Case/fields/Required_Forms_Completed__c.field-meta.xml
<CustomField>
    <fullName>Required_Forms_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For previously onboarded clients: Complete the Ongoing Monitoring Form based on their historical data and interactions.
For new clients: Generate and complete a Risk Assessment Form, ensuring all required details are captured.</inlineHelpText>
    <label>Required Forms Completed</label>
    <type>Checkbox</type>
</CustomField>