force-app/main/default/objects/Case/fields/Smart_Search_Checks_Performed__c.field-meta.xml
<CustomField>
    <fullName>Smart_Search_Checks_Performed__c</fullName>
    <inlineHelpText>Conduct initial Smart Search checks to identify potential risks, such as adverse media, sanctions, or other red flags.</inlineHelpText>
    <label>Smart Search Checks Performed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>