force-app/main/default/objects/Case/fields/Smart_Search_Results_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Smart_Search_Results_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Analyse the initial Smart Search results to determine if any flags (e.g., PEP, RCA, SIP, or other risks) have been identified. Document findings in the Case, including details on flagged individuals or entities.</inlineHelpText>
    <label>Smart Search Results Reviewed</label>
    <type>Checkbox</type>
</CustomField>