force-app/main/default/objects/Case/recordTypes/Adhoc_Check.recordType-meta.xml
<RecordType>
    <fullName>Adhoc_Check</fullName>
    <active>true</active>
    <businessProcess>Case Support Process</businessProcess>
    <label>Adhoc Check</label>
</RecordType>