force-app/main/default/objects/Case/validationRules/V1_OnboardingCaseClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>V1_OnboardingCaseClosed</fullName>
    <active>true</active>
    <description>Account fields required when closing an Onboarding Case</description>
    <errorConditionFormula>AND(
 $Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c = false,
 ISCHANGED(Status),
 Text(Status) = &apos;Closed&apos;,
 TEXT(Closed_Reason__c) = &apos;Onboarded&apos;,
  OR(
   ISBLANK( Account.c2g__CODAAccountTradingCurrency__c ),
   ISBLANK( Account.c2g__CODAInvoiceEmail__c ),
   ISBLANK( Account.c2g__CODAAccountsReceivableControl__c ),
   ISBLANK( TEXT(Account.c2g__CODAVATStatus__c ))
 )
)</errorConditionFormula>
    <errorMessage>Please ensure you&apos;ve updated the Account Information before finalising this Onboarding: Invoice Email, Tax Status, Accounts Receivable Control and Account Trading Currency</errorMessage>
</ValidationRule>